PROMPT UPDATES and Content